# ezview

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ezview/: __init__.py  colors.py  plot.py  qplot.py
ezview/items/: __init__.py  shapes.py
