[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ezview"
version = "0.1.0"
authors = [
  { name="Mario Garcia", email="mario@myneeno.com" },
]
description = "Light visualization Toolkit for motion capture data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
